--- a/football/android/build.gradle
+++ b/football/android/build.gradle
@@ -2,10 +2,12 @@ buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
         google()
+        // maven { url 'https://maven.google.com' }
         jcenter()
     }
 
     dependencies {
+        // classpath 'com.android.tools.build:gradle:3.5.0' //3.3.1   3.5.0
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
@@ -14,6 +16,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        // maven { url 'https://maven.google.com' }
         jcenter()
     }
 }
